<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/bg_ab"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="7dp" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/topbar_icono" />

        <com.xabber.android.utils.font.tvRobotoRegular
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/acerca_de_titulo"
            android:textColor="@color/text_black_title"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo_junta" />

            <com.xabber.android.utils.font.tvRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/acerca_de"
                android:textColor="#515151"
                android:textSize="16sp" />

            <com.xabber.android.utils.font.tvRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/version_number"
                android:textColor="#515151"
                android:textSize="16sp" />

            <com.xabber.android.utils.font.btnRobotoRegular
                android:id="@+id/button_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_btn_login"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/boton_ayuda"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <com.xabber.android.utils.font.btnRobotoRegular
                android:id="@+id/button_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_btn_login"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/boton_soporte"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>